[package]
name = "menemen"
version = "0.2.2-alpha" # Update ./src/lib path and ./tests/request::body_build_test version
authors = ["Behemehal", "Ahmetcan Aksu"]
edition = "2021"
description = "A streaming http request library "
categories = ["network-programming"]
keywords = ["network", "http", "stream"]
license = "GPL-2.0"
readme = "README.md"
documentation = "https://docs.rs/menemen"
repository = "https://github.com/behemehal/Menemen"

[dependencies]
anyhow = "1.0.52"
openssl = "0.10.36"
bufstream = { version = "0.1.4" }

[[example]]
name = "download_file"
path = "examples/download_file.rs"

[[example]]
name = "echo"
path = "examples/echo.rs"

[[example]]
name = "parse_url"
path = "examples/parse_url.rs"