[package]
name = "menemen"
version = "0.4.3-alpha"
authors = ["Behemehal", "Ahmetcan Aksu"]
edition = "2021"
description = "A streaming http request library"
categories = ["network-programming"]
keywords = ["network", "http", "stream"]
license = "GPL-2.0"
readme = "README.md"
documentation = "https://docs.rs/menemen"
repository = "https://github.com/behemehal/Menemen"

[dependencies]
anyhow = "1.0.52"
openssl = { version = "0.10.36", optional = true }
bufstream = { version = "0.1.4" }

[features]
default = []
https = ["openssl"]

[[example]]
name = "download_file"
path = "examples/download_file.rs"

[[example]]
name = "echo"
path = "examples/echo.rs"

[[example]]
name = "parse_url"
path = "examples/parse_url.rs"