[package]
name = "menemen"
version = "1.0.2"
authors = ["Behemehal", "Ahmetcan Aksu"]
edition = "2021"
description = "A streaming http request library"
categories = ["network-programming"]
keywords = ["network", "http", "stream"]
license = "GPL-2.0"
readme = "README.md"
documentation = "https://docs.rs/menemen"
repository = "https://github.com/behemehal/Menemen"

[dependencies]
anyhow = "1.0.52"
bufstream = { version = "0.1.4" }
native-tls = "0.2"

[dev-dependencies]
libflate = "1.3.0"

[[example]]
name = "download_file"
path = "examples/download_file.rs"

[[example]]
name = "echo"
path = "examples/echo.rs"

[[example]]
name = "parse_url"
path = "examples/parse_url.rs"

[[example]]
name = "post"
path = "examples/post.rs"

[[example]]
name = "gzip"
path = "examples/gzip.rs"